--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "independent-service-provider",
+  "name": "fitness-master",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
